# MAY-viewer

./: .gitignore  HANDOVER.md  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: boundtile.mjs  maptile.mjs  probe.mjs
frontend/src/: App.tsx  styles.css
frontend/src/components/: GeoTree.tsx  Inspector.tsx  MapView.tsx  StatsPanel.tsx  TransitPanel.tsx
frontend/src/data/: appConfig.ts  columns.ts  labels.ts  manifest.ts  parquet.ts  personindex.ts
frontend/src/state/: store.ts
frontend/src/util/: format.ts
mayviewer/: __init__.py  cli.py  schema.py  serve.py
mayviewer/prep/: __init__.py  aggregates.py  boundaries.py  boundary_build.py  drilldown.py  geo_tree.py  hexbin.py  personindex.py  pipeline.py  pmtiles.py  reader.py  transit.py
mayviewer/synth/: __init__.py  scale_generator.py
tests/: test_member_resolution.py  test_prep.py  test_scale_generator.py
