[project]
name = "may-viewer"
version = "0.1.0"
description = "Local-first visualisation tool for MAY synthetic-world HDF5 files (scales to 60M agents)."
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.12",
    "numpy>=1.26",
    "pyarrow>=14",
    "h3>=4",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
mayviewer = "mayviewer.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mayviewer*"]
